=== HEAD

* Remove Sequel::SQL::IdentifierMethods (jeremyevans)

* Don't have the schema_dumper extension produce code that relies on the core_extensions (jeremyevans)

* Fix dropping of columns with constraints on Microsoft SQL Server (mluu, jeremyevans) (#515, #518)

* Don't have pg_* extensions add methods to core classes unless the core_extensions extension is loaded (jeremyevans)

* Use real boolean literals on derby 10.7+ (jeremyevans, matthauck) (#514)

* Work around JRuby 1.6 ruby 1.9 mode bug in Time#nsec for Time prepared statement arguments on jdbc (jeremyevans)

* Handle blob prepared statement arguments on jdbc/db2 and jdbc/oracle (jeremyevans)

* Handle blob values in the swift adapter (jeremyevans)

* Handle better nil prepared statement arguments on jdbc (jeremyevans) (#513)

* Make SQL::Blob objects handle as, cast, and lit methods even if the core extensions are not loaded (jeremyevans)

* Make #* with no arguments produce a ColumnAll for Identifier and QualifiedIdentifier (jeremyevans)

* Sequel.expr(:symbol) now returns Identifier, QualifiedIdentifier, or AliasedExpression instead of Wrapper (jeremyevans)

* Treat clob columns as string instead of blob on Derby (jeremyevans) (#509)

=== 3.37.0 (2012-07-02)

* Allow specifying eager_graph alias base on a per-call basis using an AliasedExpression (jeremyevans)

* Allow bin/sequel to respect multiple -l options for logging to multiple files (jeremyevans)

* Correctly handle cases where SCOPE_IDENTITY is nil in the odbc/mssql adapter (stnoonan, jeremyevans)

* Add pg_interval extension, for returning interval types as ActiveSupport::Duration instances (jeremyevans)

* Save a new one_to_one associated object once instead of twice in the nested_attributes plugin (jeremyevans)

* Don't add unnecessary filter condition when passing a new object to a one_to_one setter method (jeremyevans)

* Differentiate between column references and method references in many_through_many associations (jeremyevans)
